--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>L RMN  HOTEL</title>
+    <title>KARRIEM JESSIE  HOTEL</title>
     <script defer src="./index.js"></script>
   </head>
   <body id="home">
