--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="content d-flex">
           <div class="logo">
-            <a href="index.html">LRMN</a>
+            <a href="index.html">KJ</a>
           </div>
           <!--NAV TOGGLE BUTTON-->
           <div class="toggle-menu">
@@ -48,7 +48,7 @@
         <div class="slide">
           <div class="content">
             <div class="title">
-              <h1>welcome to L RMN</h1>
+              <h1>welcome to KARRIEM JESSIE HOTEL</h1>
               <span>hotel & resort</span>
             </div>
             <img src="./img/slider-1.jpg" alt="slide-1" />
